observability/65-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-query
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: istio-system
  hostnames:
    - "jaeger.internal.czcx.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy-jaeger
          port: 4180
